app/assets/stylesheets/categories.scss
// Import Google Fonts
@import url(http://fonts.googleapis.com/css?family=Roboto+Slab|Nunito-Light);

// Font Variables
// $ubuntu: 'Roboto Slab', serif;
$default-font: 'Nunito';

// Custom CSS Animations
@keyframes fadein {
  0% { opacity: 0; }
  25% { opacity: 0; }
  50% { opacity: 0; }
  100% { opacity: 1; }
}

@keyframes move {
  0% { opacity: 0; top: 250px; }
  25% { opacity: 1; top: 250px; }
  100% { top: 0px; }
}

// Main Styling
html {
  background-image: url(http://multiclouddevops.com/assets/img/slide-001.png);
  background-repeat: none;
  color: white;
  // animation: fadein 2s;
}

.title {
  position: relative;
  animation: move 3s;
  width: 100%;
  text-align: center;
  font-family: $default-font;
}

.search {
  animation: fadein 4s;
  text-align: center;
  width: 50%;
  margin: auto;
}

table {
  position: relative;
  animation: fadein 4s;
  width: 100%;
  text-align: center;
  tr {
    td {
      width: 25%;
      padding: 2%;
      .icon-wrapper {
        padding: 10%;
        background-color: #1e2537;
        border: 2px solid #1e2537;
        box-shadow: 0 14px 32px 0 rgba(0,0,0,0.4);
        border-radius: 5px;
        transition: background-color 0.4s, box-shadow 0.4s;
        &:hover {
          background-color: #485984;
          border: 2px solid #485984;
          box-shadow: 0px 0px 0px;
        }
      }
    }
  }
}

h1 {
  font-size: 3em;
}

h2 {
  font-size: 1.5em;
}

h3 {
  font-size: 1.5em;
}

a {
  color: white;
  text-decoration: none;
  font-family: $default-font;
}

